--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,23 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link rel="stylesheet" href="style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="style.css">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
 		<title></title>
 	</head>
 	<body>
 		<header id="text">
-			<h1>The creative crew</h1>
-		</header>
-		<main>
+			<div id="bigText">
+				<h1>The creative crew</h1>
+			</div>
 			<div id="paragraph">
 				<h2>WHO WE ARE</h2>
-				<p>We are team of creative diverse, driven, innovative individuals working in various locations from the world.</p>
+				<p id="definition">We are team of creative diverse, driven, innovative individuals working in various locations from the world.</p>
 			</div>
+		</header>
+		<main>
 			<section id="images">
 				<figure class="imageFull">
 					<img src="../assets/photo_1.png" alt="hombre con camisa azul, barba, blanco y de ojos azules">
@@ -50,11 +52,10 @@
 					<figcaption>Stan John</figcaption>
 					<figcaption class="job right">DEVELOPER</figcaption>
 				</figure>
-				</div>
 			</section>
-			<footer>
-				<p>created by <a href="#">daniel monsalve</a></p>
-			</footer>
 		</main>
+		<footer>
+			<p>created by <a href="#">daniel monsalve</a></p>
+		</footer>
 	</body>
 </html>
